--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,26 @@ uuid = "cce7436b-6fc9-45d4-b559-7090ca6316e4"
 authors = ["Johanni Brea"]
 version = "0.1.0"
 
+[deps]
+BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
+CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
+FoodCachingExperiments = "c83de4e0-732e-420a-99d5-72756bd45ef8"
+FoodCachingModels = "1c4db5f1-e6ab-45d4-a5c5-b1bf60220e94"
+Genie = "c43c736e-a2d1-11e8-161f-af95117fbd1e"
+NestedStructInitialiser = "82eb44c5-af0e-4169-934d-9c2441e452c9"
+PGFPlotsX = "8314cec4-20b6-5062-9cdb-752b83310925"
+PlanningVsCompensatoryCaching = "2a32e55a-db92-4381-b007-78a68947095e"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Stipple = "4acbeb90-81a0-11ea-1966-bdaff8155998"
+StipplePlotly = "ec984513-233d-481d-95b0-a3b58b97af2b"
+StippleUI = "a3c5d34a-b254-4859-a8fa-b86abb7e84a3"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+
 [compat]
 julia = "1.5"
 
