--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,17 @@ StippleUI = "a3c5d34a-b254-4859-a8fa-b86abb7e84a3"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
+BSON = "0.3"
+CodecZstd = "0.7"
+DataFrames = "0.22"
+DataFramesMeta = "0.6"
+Genie = "1.18"
+PGFPlotsX = "1.2"
+PlotlyJS = "0.14"
+StatsBase = "0.33"
+Stipple = "0.11"
+StippleUI = "0.5"
+Unitful = "1.7"
 julia = "1.5"
 
 [extras]
