CompatHelper: bump compat for DataFramesMeta to 0.10, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 BSON = "0.3"
 CodecZstd = "0.7"
 DataFrames = "0.22"
-DataFramesMeta = "0.6"
+DataFramesMeta = "0.6, 0.10"
 Genie = "1.18"
 PGFPlotsX = "1.2"
 PlotlyJS = "0.14"
