CompatHelper: bump compat for Genie to 4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ BSON = "0.3"
 CodecZstd = "0.7"
 DataFrames = "0.22"
 DataFramesMeta = "0.6"
-Genie = "1.18"
+Genie = "1.18, 4"
 PGFPlotsX = "1.2"
 PlotlyJS = "0.14"
 StatsBase = "0.33"
