CompatHelper: bump compat for Stipple to 0.18, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -32,7 +32,7 @@ Genie = "1.18"
 PGFPlotsX = "1.2"
 PlotlyJS = "0.14"
 StatsBase = "0.33"
-Stipple = "0.11"
+Stipple = "0.11, 0.18"
 StippleUI = "0.5"
 Unitful = "1.7"
 julia = "1.5"
