--- a/Project.toml
+++ b/Project.toml
@@ -33,6 +33,7 @@ PGFPlotsX = "1.2"
 PlotlyJS = "0.14"
 StatsBase = "0.33"
 Stipple = "0.11"
+StipplePlotly = "0.8"
 StippleUI = "0.5"
 Unitful = "1.7"
 julia = "1.5"
